# csgo-server

./: .gitignore  BUILD  BUILD.bazel  GameModes_Server.txt  README.md  WORKSPACE  customvotes.cfg  entrypoint.sh  subscribed_file_ids.txt
.github/workflows/: docker-publish.yml
cfg/: gamemode_armsrace_server.cfg  gamemode_casual_server.cfg  gamemode_cooperative_server.cfg  gamemode_demolition_server.cfg  gamemode_survival_server.cfg  server.cfg  start_armsrace.cfg  start_casual.cfg  start_casual_custom.cfg  start_casual_small.cfg  start_demolition.cfg  start_flyingscoutsman.cfg
